// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LedgerImportStep should render 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Wallet import is complete. Now you can use it.
        </div>
      </div>
    </div>
    <div
      class="sc-fznKkj csQbiu"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral-700"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="sc-fzplWN jUnIkq border-theme-primary-100 text-theme-primary-400"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-AxhUy hSYVGy"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <ul>
      <li>
        <div
          class="sc-fznKkj csQbiu"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-700"
            >
              Address
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                </span>
              </div>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                title="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-fznKkj bQquPG"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-700"
            >
              Balance
            </div>
            <div
              class="font-semibold"
            >
              <span
                data-testid="Amount"
              >
                0 DARK
              </span>
            </div>
          </div>
        </div>
        <fieldset
          class="sc-AxiKw iQzisX flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="names.DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
          >
            Wallet name
            <span
              class="ml-1 text-theme-neutral-light"
              data-testid="FormLabel__optional"
            >
              (
              optional
              )
            </span>
          </label>
          <input
            class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
            data-testid="ImportWallet__name-input"
            name="names.DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
          />
        </fieldset>
        <div
          class="sc-AxirZ jjvtQn border-theme-neutral-300 dark:border-theme-neutral-800"
          type="horizontal"
        />
      </li>
      <li>
        <div
          class="sc-fznKkj csQbiu"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-700"
            >
              Address
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                </span>
              </div>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-fznKkj bQquPG"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-700"
            >
              Balance
            </div>
            <div
              class="font-semibold"
            >
              <span
                data-testid="Amount"
              >
                0 DARK
              </span>
            </div>
          </div>
        </div>
        <fieldset
          class="sc-AxiKw iQzisX flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          >
            Wallet name
            <span
              class="ml-1 text-theme-neutral-light"
              data-testid="FormLabel__optional"
            >
              (
              optional
              )
            </span>
          </label>
          <input
            class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
            data-testid="ImportWallet__name-input"
            name="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </fieldset>
      </li>
    </ul>
  </section>
</div>
`;

exports[`LedgerImportStep should show an error message for duplicate name 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Wallet import is complete. Now you can use it.
        </div>
      </div>
    </div>
    <div
      class="sc-fznKkj csQbiu"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral-700"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="sc-fzplWN jUnIkq border-theme-primary-100 text-theme-primary-400"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-AxhUy hSYVGy"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <ul>
      <li>
        <div
          class="sc-fznKkj cYdjTE"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-700"
            >
              Address
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                </span>
              </div>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                title="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
              />
            </div>
          </div>
        </div>
        <fieldset
          class="sc-AxiKw iQzisX flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="names.DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
          >
            Wallet name
            <span
              class="ml-1 text-theme-neutral-light"
              data-testid="FormLabel__optional"
            >
              (
              optional
              )
            </span>
          </label>
          <input
            class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
            data-testid="ImportWallet__name-input"
            name="names.DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
          />
        </fieldset>
        <div
          class="sc-AxirZ jJscrd border-theme-neutral-300 dark:border-theme-neutral-800"
          type="horizontal"
        />
      </li>
      <li>
        <div
          class="sc-fznKkj cYdjTE"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-700"
            >
              Address
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                </span>
              </div>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
              />
            </div>
          </div>
        </div>
        <fieldset
          class="sc-AxiKw iQzisX flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          >
            Wallet name
            <span
              class="ml-1 text-theme-neutral-light"
              data-testid="FormLabel__optional"
            >
              (
              optional
              )
            </span>
          </label>
          <input
            class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
            data-testid="ImportWallet__name-input"
            name="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </fieldset>
        <div
          class="sc-AxirZ jJscrd border-theme-neutral-300 dark:border-theme-neutral-800"
          type="horizontal"
        />
      </li>
    </ul>
  </section>
</div>
`;

exports[`LedgerImportStep should show an error message for duplicate name in the form 1`] = `
<div>
  <section
    class="space-y-8"
    data-testid="LedgerImportStep"
  >
    <div
      class="flex items-end justify-between bg-theme-background"
    >
      <div>
        <h1
          class="mb-0 md:text-4xl"
          data-testid="header__title"
        >
          Completed
        </h1>
        <div
          class="text-theme-secondary-text"
          data-testid="header__subtitle"
        >
          Wallet import is complete. Now you can use it.
        </div>
      </div>
    </div>
    <div
      class="sc-fznKkj csQbiu"
      data-testid="TransactionDetail"
    >
      <div
        class="flex-1 space-y-2"
      >
        <div
          class="text-sm font-semibold text-theme-neutral-700"
        >
          Cryptoasset
        </div>
        <div
          class="font-semibold"
        >
          ARK Devnet
        </div>
      </div>
      <div
        aria-label="ARK Devnet"
        class="sc-fzplWN jUnIkq border-theme-primary-100 text-theme-primary-400"
        data-testid="NetworkIcon-ARK-ark.devnet"
      >
        <div
          class="sc-AxhUy hSYVGy"
          data-testid="NetworkIcon__icon"
          height="20"
          width="20"
        >
          <svg>
            ark.svg
          </svg>
        </div>
      </div>
    </div>
    <ul>
      <li>
        <div
          class="sc-fznKkj cYdjTE"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-700"
            >
              Address
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq
                </span>
              </div>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"50\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"60\\" cx=\\"20\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                title="DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
              />
            </div>
          </div>
        </div>
        <fieldset
          class="sc-AxiKw iQzisX flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="names.DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
          >
            Wallet name
            <span
              class="ml-1 text-theme-neutral-light"
              data-testid="FormLabel__optional"
            >
              (
              optional
              )
            </span>
          </label>
          <input
            class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
            data-testid="ImportWallet__name-input"
            name="names.DJpFwW39QnQvQRQJF2MCfAoKvsX4DJ28jq"
          />
        </fieldset>
        <div
          class="sc-AxirZ jJscrd border-theme-neutral-300 dark:border-theme-neutral-800"
          type="horizontal"
        />
      </li>
      <li>
        <div
          class="sc-fznKkj cYdjTE"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-neutral-700"
            >
              Address
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center"
              >
                <span
                  class="sc-AxjAm StDqN text-theme-text truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES
                </span>
              </div>
            </div>
          </div>
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 eHceTZ"
            data-testid="Avatar"
          >
            <div
              class="w-full h-full"
            >
              <img
                alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
              />
            </div>
          </div>
        </div>
        <fieldset
          class="sc-AxiKw iQzisX flex flex-col space-y-2"
        >
          <label
            class="flex inline-block mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
            data-testid="FormLabel"
            for="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          >
            Wallet name
            <span
              class="ml-1 text-theme-neutral-light"
              data-testid="FormLabel__optional"
            >
              (
              optional
              )
            </span>
          </label>
          <input
            class="sc-AxhCb hnARsu overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-neutral-300 dark:border-theme-neutral-800 text-theme-text transition-colors duration-200 px-4 py-3 "
            data-testid="ImportWallet__name-input"
            name="names.DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
          />
        </fieldset>
        <div
          class="sc-AxirZ jJscrd border-theme-neutral-300 dark:border-theme-neutral-800"
          type="horizontal"
        />
      </li>
    </ul>
  </section>
</div>
`;
